kubernetes/testPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
spec:
  imagePullSecrets:
    - name: harbor-ro
  containers:
    - name: dnsutils
      image: harbor.zevrant-services.internal/zevrant-services/ubuntu-base:latest
      command:
        - sleep
        - "infinity"
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
