kubernetes/gitlab.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
spec:
  ports:
    - port: 443
