kubernetes/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-point
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: gitlab.zevrant-services.com
      http:
        paths:
          - path: /
            name: gitlab
            service: gitlab
            port: 443
